gccida/g0/grokparms
/data/output_dir/patch/gcc/ida/gcc/O0/gcc-gcc-O0/grokparms/src/c-decl.c:5720:17: error: expected expression
v2 = *( _OWORD *)( ( char *)&parms_info->block + 24); 
                ^
/data/output_dir/patch/gcc/ida/gcc/O0/gcc-gcc-O0/grokparms/src/c-decl.c:5720:9: error: use of undeclared identifier '_OWORD'
v2 = *( _OWORD *)( ( char *)&parms_info->block + 24); 
        ^
2 errors generated.
make: *** [/data/output_dir/patch/gcc/ida/gcc/O0/gcc-gcc-O0/grokparms/src/obj/c-decl.o] Error 1
